--- a/Data_Analysis/6-Feature_engineering/1-Text/10.Working-With-Strings.ipynb
+++ b/Data_Analysis/6-Feature_engineering/1-Text/10.Working-With-Strings.ipynb
@@ -175,6 +175,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# names.str.upper()   esto no convierte el None en mayus ya que solo convierte los str. primero comprueba el tipo y luego ejecuta"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,6 +229,13 @@
     "|``lstrip()`` |  ``swapcase()``  |  ``istitle()``   | ``rpartition()`` |\n",
     "\n",
     "Notice that these have various return values. Some, like ``lower()``, return a series of strings:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "rstrip() y lstrip() sirve para eliminar espacios al principio y al final\n"
    ]
   },
   {
@@ -431,7 +447,8 @@
     }
    ],
    "source": [
-    "monte.str.extract('([A-Za-z]+)', expand=False)"
+    "monte.str.extract('([A-Za-z]+)', expand=False)\n",
+    "# () para indicar lo que estoy buscando. dentro de eso algo qeu comience con A hasta Z o con a hasta Z. El + es que muestre hasta el 'final' de esa palabra"
    ]
   },
   {
@@ -592,6 +609,13 @@
    ],
    "source": [
     "monte.str.split().str.get(-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hay que poner doble .str, ya que el split devuevle una lista. "
    ]
   },
   {
