--- a/Data_Analysis/Analisis_de_datos/ch_05/1-introduccion_matplotlib.ipynb
+++ b/Data_Analysis/Analisis_de_datos/ch_05/1-introduccion_matplotlib.ipynb
@@ -105,7 +105,8 @@
     "fb = pd.read_csv(\n",
     "    'data/fb_stock_prices_2018.csv', index_col='date', parse_dates=True\n",
     ")\n",
-    "plt.plot(fb.index, fb.open)"
+    "plt.plot(fb.index, fb.open)\n",
+    "# diferencia con el de arriba, que no tenemos el plt.show. Con el %matplotlib aparece el numero que tneemos que quitar con ;. "
    ]
   },
   {
@@ -120,6 +121,15 @@
    "metadata": {},
    "source": [
     "Podemos pasar una cadena especificando el estilo del trazado. Tiene la forma `[marcador][estilo de línea][color]`. Por ejemplo, podemos hacer una línea discontinua negra con `'--k'` o un gráfico de dispersión rojo con `'or'`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or significa = círculos rojos"
    ]
   },
   {
@@ -208,7 +218,9 @@
    ],
    "source": [
     "quakes = pd.read_csv('data/earthquakes.csv')\n",
-    "plt.hist(quakes.query('magType == \"ml\"').mag)"
+    "plt.hist(quakes.query('magType == \"ml\"').mag) #query es un método de DF, lo de dentro tiene que ser una expresión booleana.\n",
+    "# query = filtra donde magtype sea ml y me quedo con la col mag.\n",
+    "# es lo mismo que quakes[quakes]['magtype']== 'ml']['mag]"
    ]
   },
   {
@@ -242,7 +254,9 @@
     "fig, axes = plt.subplots(1, 2, figsize=(10, 3))\n",
     "for ax, bins in zip(axes, [7, 35]):\n",
     "    ax.hist(x, bins=bins)\n",
-    "    ax.set_title(f'bins param: {bins}')"
+    "    ax.set_title(f'bins param: {bins}')\n",
+    "\n",
+    "    # zip para cuando tenemos varias listas, coge los elementos en las mismas posiciones y crea una tupla con cada pareja. si  hacemos un diccionario con un zip, hemos hehco un dicc con dos listas."
    ]
   },
   {
