--- a/Data_Analysis/Analisis_de_datos/ch_06/1-introduccion_a_seaborn.ipynb
+++ b/Data_Analysis/Analisis_de_datos/ch_06/1-introduccion_a_seaborn.ipynb
@@ -355,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "la diagonal principal son hist. Sirve para ver cuales tienen una alta correlación y poder tomar decisiones. + correlación si siguenla diagonal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -391,6 +398,13 @@
    "metadata": {},
    "source": [
     "Al igual que con `pandas` podemos especificar qué mostrar a lo largo de la diagonal; sin embargo, `seaborn` también nos permite colorear los datos basándonos en otra columna (u otros datos con la misma forma):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hay cuatro gráficos porque divido el año en 4 cuartos\n"
    ]
   },
   {
@@ -436,6 +450,11 @@
     "### `jointplot()`\n",
     "El jointplot nos permite visualizar la relación entre dos variables, como un gráfico de dispersión. Sin embargo, obtenemos el beneficio añadido de poder visualizar sus distribuciones al mismo tiempo (como un histograma o KDE). Las opciones por defecto nos dan un gráfico de dispersión en el centro e histogramas a los lados:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -574,6 +593,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "más centrado, más concentración.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Si especificamos `kind='reg'` en su lugar, obtendremos una línea de regresión en el centro y KDEs a los lados:"
    ]
   },
@@ -622,6 +648,13 @@
    "metadata": {},
    "source": [
     "Si pasamos `kind='resid'`, obtendremos los residuos de la regresión mencionada:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "si lo residuos tienen la misma distrib de la serie hay problema de tendencia"
    ]
   },
   {
@@ -699,7 +732,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools"
+    "import itertools\n",
+    "# interno de python "
    ]
   },
   {
@@ -922,6 +956,13 @@
     "Podemos crear subparcelas a través de subconjuntos de nuestros datos por facetado. En primer lugar, creamos una `FacetGrid` especificando cómo distribuir los gráficos (qué columna categórica va a lo largo de las filas y cuál a lo largo de las columnas). A continuación, llamamos al método `map()` de la `FacetGrid` y le pasamos la función de trazado que queremos utilizar (junto con cualquier argumento adicional).\n",
     "\n",
     "Utilicemos una cuadrícula de facetas para mostrar la distribución de las magnitudes de los terremotos en Indonesia y Papúa Nueva Guinea por `tsunami` y `parsed_place`:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EJEMPLO DE COMBINACION DE DOS DE ESTOS GRAFICOS EN UNO SOLO EN EL SEABORN ANTERIOR\n"
    ]
   },
   {
