--- a/Data_Analysis/Analisis_de_datos/ch_06/2-formateando_plots.ipynb
+++ b/Data_Analysis/Analisis_de_datos/ch_06/2-formateando_plots.ipynb
@@ -313,7 +313,7 @@
     "ax.legend(framealpha=0.5, ncol=2)\n",
     "ax.set_xlabel('')\n",
     "ax.set_ylabel('porcentaje de casos de COVID-19 en el mundo')\n",
-    "ax.set_ylim(0, None)\n",
+    "ax.set_ylim(0, None)   #none es para que no corte el grafico. \n",
     "\n",
     "for spine in ['top', 'right']:\n",
     "    ax.spines[spine].set_visible(False)"
