--- a/Data_Analysis/Analisis_de_datos/ch_06/3-customizando_visualizaciones.ipynb
+++ b/Data_Analysis/Analisis_de_datos/ch_06/3-customizando_visualizaciones.ipynb
@@ -211,7 +211,7 @@
    ],
    "source": [
     "from viz import std_from_mean_kde\n",
-    "std_from_mean_kde??"
+    "std_from_mean_kde()"
    ]
   },
   {
