--- a/Machine_Learning/1-Supervisado/2-Classification/4-Logistic_Regression/fe.ipynb
+++ b/Machine_Learning/1-Supervisado/2-Classification/4-Logistic_Regression/fe.ipynb
@@ -1753,7 +1753,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x256ff758a50>"
+       "<seaborn.axisgrid.PairGrid at 0x1fb453bf990>"
       ]
      },
      "execution_count": 37,
@@ -1831,6 +1831,86 @@
     "print(accuracy_score(y_test, predict))\n",
     "print(confusion_matrix(y_test, predict))\n",
     "# este modelo categoriza todo perfectamente. Habíamos quitado features importantes para el modelo en el ej anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>setosa</th>\n",
+       "      <td>-0.397226</td>\n",
+       "      <td>0.960727</td>\n",
+       "      <td>-2.373945</td>\n",
+       "      <td>-1.003155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>versicolor</th>\n",
+       "      <td>0.512738</td>\n",
+       "      <td>-0.253168</td>\n",
+       "      <td>-0.215348</td>\n",
+       "      <td>-0.769176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>virginica</th>\n",
+       "      <td>-0.115512</td>\n",
+       "      <td>-0.707559</td>\n",
+       "      <td>2.589293</td>\n",
+       "      <td>1.772331</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+       "setosa              -0.397226          0.960727          -2.373945   \n",
+       "versicolor           0.512738         -0.253168          -0.215348   \n",
+       "virginica           -0.115512         -0.707559           2.589293   \n",
+       "\n",
+       "            petal width (cm)  \n",
+       "setosa             -1.003155  \n",
+       "versicolor         -0.769176  \n",
+       "virginica           1.772331  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(log_reg.coef_, columns=iris.feature_names, index = iris.target_names  )\n",
+    "# coef= peso de cada variable. Es la pendiente que va con cada variable en la función del modelo."
    ]
   },
   {
