--- a/Machine_Learning/1-Supervisado/1-Regression/3-Regularization/05_Regularized_Linear_Models.ipynb
+++ b/Machine_Learning/1-Supervisado/1-Regression/3-Regularization/05_Regularized_Linear_Models.ipynb
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una forma muy distinta de regularizar algoritmos de aprendizaje iterativo como el descenso de gradiente es detener el entrenamiento en cuanto el error de validación alcance un mínimo. Esto se denomina Early Stopping. La Figura a continuación muestra un modelo complejo (en este caso, un modelo de regresión polinómica de alto grado) que se entrena con el descenso de gradiente por lotes en el conjunto de datos cuadráticos que utilizamos anteriormente. A medida que pasan las épocas, el algoritmo aprende, y su error de predicción (RMSE) en el conjunto de entrenamiento disminuye, junto con su error de predicción en el conjunto de validación. Sin embargo, al cabo de un tiempo, el error de validación deja de disminuir y empieza a aumentar. Esto indica que el modelo ha empezado a sobreajustar los datos de entrenamiento. Con la Early Stopping, simplemente se detiene el entrenamiento en cuanto el error de validación alcanza el mínimo. Se trata de una técnica de regularización tan sencilla y eficaz que Geoffrey Hinton la denominó un \"hermoso almuerzo gratis\""
+    "Una forma muy distinta de regularizar algoritmos de aprendizaje iterativo como el descenso de gradiente es detener el entrenamiento en cuanto el error de validación alcance un mínimo. Esto se denomina Early Stopping. La Figura a continuación muestra un modelo complejo (en este caso, un modelo de regresión polinómica de alto grado) que se entrena con el descenso de gradiente por lotes en el conjunto de datos cuadráticos que utilizamos anteriormente. A medida que pasan las iteraciones/interacciones?(epoch), el algoritmo aprende, y su error de predicción (RMSE) en el conjunto de entrenamiento disminuye, junto con su error de predicción en el conjunto de validación. Sin embargo, al cabo de un tiempo, el error de validación deja de disminuir y empieza a aumentar. Esto indica que el modelo ha empezado a sobreajustar los datos de entrenamiento. Con la Early Stopping, simplemente se detiene el entrenamiento en cuanto el error de validación alcanza el mínimo. Se trata de una técnica de regularización tan sencilla y eficaz que Geoffrey Hinton la denominó un \"hermoso almuerzo gratis\""
    ]
   },
   {
@@ -709,7 +709,9 @@
     "X_train, y_train = X[: m // 2], y[: m // 2, 0]\n",
     "X_valid, y_valid = X[m // 2 :], y[m // 2 :, 0]\n",
     "\n",
-    "preprocessing = make_pipeline(PolynomialFeatures(degree=90, include_bias=False),\n",
+    "# El codigo de arriba es para que el mmodelo sea de dos dimensiones y poderlo graficar. X valid es un porcentaje del df completo, que lo divido en validation (test) y train. \n",
+    "\n",
+    "preprocessing = make_pipeline(PolynomialFeatures(degree=90, include_bias=False),  #modelo polinomico de 90 para exagerar\n",
     "                              StandardScaler())\n",
     "X_train_prep = preprocessing.fit_transform(X_train)\n",
     "X_valid_prep = preprocessing.transform(X_valid)\n",
