--- a/Machine_Learning/1-Supervisado/1-Regression/Kaggle1/Kaggle_Ayuda_j.ipynb
+++ b/Machine_Learning/1-Supervisado/1-Regression/Kaggle1/Kaggle_Ayuda_j.ipynb
@@ -1297,16 +1297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e993ca9310>]"
+       "[<matplotlib.lines.Line2D at 0x1e53a517b90>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
