--- a/Machine_Learning/1-Supervisado/4-Ejercicio/California copy clase miercoles.ipynb
+++ b/Machine_Learning/1-Supervisado/4-Ejercicio/California copy clase miercoles.ipynb
@@ -2449,7 +2449,10 @@
     "# Ajusta y transforma las columnas seleccionadas en el conjunto de entrenamiento (X_train)\n",
     "X_train_escalado = pd.DataFrame(scaler.fit_transform(X_train[columnas_std]), columns=columnas_std, index = X_train.index)\n",
     "X_val_escalado = pd.DataFrame(scaler.transform(X_val[columnas_std]), columns=columnas_std, index = X_val.index)\n",
-    "\n"
+    "\n",
+    "# ¿por qué al final no se hace fit_transform y solo trainsform?\n",
+    "# fit calcula la media y la desviación del conjunto de datos de la columna. transform, utiliza la media y la desviación del conjunto de train.\n",
+    "# Es mejor para evitar que outliers de test influyan en la predicción y no nos enteremos (si entran con los datos de media y desv. de train, el modelo nos dara un error mayor y habrá que ver por qué)\n"
    ]
   },
   {
