--- a/Machine_Learning/1-Supervisado/4-Ejercicio/California.ipynb
+++ b/Machine_Learning/1-Supervisado/4-Ejercicio/California.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm\n",
-    "from sklearn.preprocessing import FunctionTransformer, StandardScaler, OneHotEncoder,StandardScaler,MinMaxScaler,LabelEncoder\n",
+    "from sklearn.preprocessing import FunctionTransformer, StandardScaler, OneHotEncoder,MinMaxScaler,LabelEncoder\n",
     "\n",
     "\n"
    ]
@@ -1024,7 +1024,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x27e17e65f50>]"
+       "[<matplotlib.lines.Line2D at 0x236cf141b90>]"
       ]
      },
      "execution_count": 18,
@@ -1156,6 +1156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Borrar o imputar missings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1163,6 +1170,20 @@
    "source": [
     "df.dropna(inplace=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OUTLIERS?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1218,7 +1239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## División de datos (train-->{train, validation}, test)"
+    "## División de datos\n",
+    "Data ---> 80% train --> {80% train --> 20% validation}\n",
+    "|    ---> 20% test\n",
+    "\n",
+    " (train-->{train, validation}, \n",
+    " test)"
    ]
   },
   {
