--- a/Machine_Learning/1-Supervisado/3-Modelos/02-Decision_Trees/ejercicio/Regression_Tree_class.ipynb
+++ b/Machine_Learning/1-Supervisado/3-Modelos/02-Decision_Trees/ejercicio/Regression_Tree_class.ipynb
@@ -3648,8 +3648,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip uninstall matplotlib\n",
-    "!pip install matplotlib==3.7.3"
+    "# !pip uninstall matplotlib\n",
+    "# !pip install matplotlib==3.7.3"
    ]
   },
   {
